--- a/Final Fantasy Mystery World/Final Fantasy Mystery World.vcxproj
+++ b/Final Fantasy Mystery World/Final Fantasy Mystery World.vcxproj
@@ -129,6 +129,7 @@
     <Xml Include="Game\config.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="Game\player_config.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
