--- a/Final_Fantasy_Mystery_World/Final Fantasy Mystery World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final Fantasy Mystery World.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="GUI_Button.cpp" />
     <ClCompile Include="GUI_Image.cpp" />
+    <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
@@ -113,6 +114,7 @@
     <ClInclude Include="GUI.h" />
     <ClInclude Include="GUI_Button.h" />
     <ClInclude Include="GUI_Image.h" />
+    <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1PerfTimer.h" />
