--- a/Final_Fantasy_Mystery_World/Final Fantasy Mystery World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final Fantasy Mystery World.vcxproj
@@ -83,7 +83,7 @@
     <ClCompile Include="DynamicEntity.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="j1EntityManager.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="GUI_Button.cpp" />
     <ClCompile Include="GUI_Image.cpp" />
@@ -111,7 +111,7 @@
     <ClInclude Include="DynamicEntity.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
-    <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="j1EntityManager.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="GUI_Button.h" />
     <ClInclude Include="GUI_Image.h" />
