--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -225,5 +225,8 @@
     <None Include="Game\maps\iso_walk2.tmx">
       <Filter>XML</Filter>
     </None>
+    <None Include="Game\entities\WarriorSpritesheet.tsx">
+      <Filter>XML</Filter>
+    </None>
   </ItemGroup>
 </Project>
