--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -82,6 +82,7 @@
     <ClCompile Include="Sensor.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="j1Module.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Scene.h" />
