--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="EasingSplines.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
+    <ClCompile Include="j1Collisions.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Scene.h" />
@@ -187,6 +190,12 @@
       <Filter>Tools</Filter>
     </ClInclude>
     <ClInclude Include="EasingSplines.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="p2Line.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Collisions.h">
       <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
